Quick fix for excessive vertical spacing between transcribe-tag-discussion tabs and related content in righthand column on contribute page.

--- a/concordia/static/css/base.css
+++ b/concordia/static/css/base.css
@@ -599,7 +599,7 @@ input {
   text-decoration: none;
 }
 
-.tab-content, .tab-pane {
+#nav-tabContent, .tab-pane {
   height: var(--height-contribute-input);
   overflow-y: scroll;
 }
